Python/flaskMySQL/flask_mysql/errorsAssignment.txt
1.  sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (2003, "Can't connect to MySQL server on '127.0.0.1' (61)")

I changed the port to match the port on MAMP



2.   sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (1045, "Access denied for user 'nikki'@'localhost' (using password: YES)")

I went into the m and put in the username as “root”.



3.   sqlalchemy.exc.OperationalError: (_mysql_exceptions.OperationalError) (1045, "Access denied for user 'root'@'localhost' (using password: YES)")

I went into MAMP and corrected the spelling of the password from “roo” to “root”.



4.  File "/Users/nikki/Sites/DojoAssignments/Python/flaskMySQL/flask_mysql/mysqlconnection.py", line 9
    'database': , # we got db as an argument
                ^
SyntaxError: invalid syntax


I fixed the syntax error on line 9 and added ‘db’ to ‘database.
